--- a/src/index.scss
+++ b/src/index.scss
@@ -34,7 +34,6 @@ li, ul {
     -webkit-backdrop-filter: blur(21px);
     z-index: 2;
     width: 100%;
-    padding: 0 1.5rem;
 
     div {
         display: flex;
@@ -42,6 +41,7 @@ li, ul {
         justify-content: space-between;
         max-width: 79.5rem;
         margin: 0 auto;
+        padding: 0 1.5rem;
     }
 
     h1 {
@@ -308,10 +308,8 @@ footer {
 }
 
 @media only screen and (max-width: 740px) {
-    .page-header {
-        padding: 0 1rem;
-
-        h2 {
+    .education, .job-experience, .background h2 {
+        header {
             padding-left: 0;
         }
     }
@@ -364,13 +362,6 @@ footer {
         display: flex;
         flex-direction: column;
         gap: 1.5rem;
-    }
-
-    .education, .job-experience {
-        h2 {
-            text-align: center;
-            padding-left: 0;
-        }
     }
 }
 
